Add pizza is now sticky, refactor pizzeria slice, help page is now mobile-compatible

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -10,7 +10,6 @@
 
     "no-pizza": "Hmm we need more pizza here.",
 
-
     "pizza-table-quantity": "Quantity",
     "pizza-table-name": "Name",
     "pizza-table-eaten-by": "Eaten by",
@@ -112,7 +111,6 @@
     "suggester-quantity-description": "Choose the quantity of pizza per person",
     "suggester-unfairness-description": "How much more pizza can someone have compared to others.",
 
-
     "info-title": "<bold>Welcome to <title /> ! </bold>",
     "info-intro-p1": "This little website is a tool to plan your pizza party.",
     "info-intro-p2": "More specifically, it will help you choose the right amount of specific diet pizzas for your guests.",
@@ -127,22 +125,24 @@
     "info-theorem-p4": "One might have already noted that, in such circumstances, even one single pizza with meat will give advantage to <red>omnivorous</red> people. One is right, but this problem can be greatly mitigated. We'll see how.",
 
     "info-how-title": "But how can this website help me plan a great pizza party?",
-    "info-how-p1": "The website is divided in 3 distincts panels:",
-    "info-how-l1": "<bold>The People Panel:</bold> This panel lets you configure the diets of your guests.",
-    "info-how-l2": "<bold>The Pizza Panel:</bold> This panel lets you choose which pizza you want to order.",
-    "info-how-l3": "<bold>The Result Panel:</bold> This panel gives you insights on your plan and helps you decide.",
+    "info-how-p1": "The website is divided in 3 distincts parts:",
+    "info-how-l1": "<bold>The People section:</bold> This section lets you configure the diets of your guests.",
+    "info-how-l2": "<bold>The Pizza section:</bold> This section lets you choose which pizza you want to order.",
+    "info-how-l3": "<bold>The Result section:</bold> This section gives you insights on your plan and helps you decide.",
     "info-how-p2": "We will cover them one by one.",
 
-    "info-people-title": "The People Panel",
-    "info-people-p1": "In this panel, you will find four counters that represent how much of each diet will be at your party.",
+    "info-people-title": "The People section",
+    "info-people-p1": "In this section, you will find four counters that represent how much of each diet will be at your party.",
     "info-people-l1": "<normalIcon/> Represents <red>omnivorous</red> people",
     "info-people-l2": "<pescoVegetarianIcon/> Represents <blue>pesco-vegetarian</blue> people",
     "info-people-l3": "<vegetarianIcon/> Represents <green>vegetarian</green> people",
     "info-people-l4": "<veganIcon/> Represents <orange>vegan</orange> people",
     "info-people-p3": "At the bottom of the list you can see the total number of people.",
+    "info-people-p3-mobile": "At the top right of the section you can see the total number of people.",
 
-    "info-pizza-title": "The Pizza Panel",
-    "info-pizza-p1": "In this panel you will find a table of pizzas described by their quantity, name, diet and price. At the bottom of the table is a form to add new pizzas to the list.",
+    "info-pizza-title": "The Pizza section",
+    "info-pizza-p1": "In this section you will find a table of pizzas described by their quantity, name, diet and price. At the bottom of the table is a button to add new pizzas to the list.",
+    "info-result-expandable-mobile": "This section at the bottom of the main page can be expanded to see all the details mentionned below.",
     "info-pizza-p2": "In here you can put what you plan to order, since the quantity can be 0, you can also add the whole menu of the pizzeria you are ordering from and only then choose which one you want.",
     "info-pizza-p3": "The pizza diet",
     "info-pizza-p4": "The diet of your pizza is represented by a selector which colorize every diet that can eat your pizza.",
@@ -152,12 +152,12 @@
     "info-pizza-l4": "<veganIcon />: <orange>vegan</orange>.",
     "info-pizza-p5": "Note that it is therefore not possible to make a pizza exclusive to vegan, because in that case it will necessarily be eatable by the most permissive diets.",
     "info-pizza-p6": "You can always edit or delete a pizza.",
-    "info-pizzeria-p1": "If you want to save the pizzas you just entered. You can do so by clicking either <saveButton/> or <saveAsButton/> at the top of the panel.",
+    "info-pizzeria-p1": "If you want to save the pizzas you just entered. You can do so by clicking either <saveButton/> at the top of the section.",
     "info-pizzeria-p2": "On your next visit, your will be able to load it with the button <pizzeriasButton/>.",
 
-    "info-result-title": "The Result Panel",
-    "info-result-p1": "In this panel you will find insights about your plan.",
-    "info-result-p2": "The cost and pizza quantity are represented on the right like this:",
+    "info-result-title": "The Result section",
+    "info-result-p1": "In this section you will find insights about your plan.",
+    "info-result-p2": "The cost and pizza quantity are represented like this:",
     "info-result-p4": "The fairness for every diet is represented by flag giving qualitative results like this:",
     "info-result-flag1": "This flag means that vegetarians eat exactly as much as the diet that eats the most.",
     "info-result-flag2": "This flag means that the diet that eats the most eats less that 125% what vegetarians eat.",
@@ -167,15 +167,16 @@
     "info-result-flag6": "This flag means that there is no vegetarians in the party.",
     "info-result-p5": "(If these thresholds doesn't fit your need, you can change them in the parameters that you can find by clicking the icon <parametersIcon/> on the main page.",
     "info-result-p6": "A good rule indicator that your order is fair is to have all flag to at least <green>Good</green>.",
-    "info-result-p7": "The graphs panel shows you the proportions of people and pizzas graphically.",
-    "info-result-p8": "The details panel shows you what to expect in terms of reparition of the food. With numbers this time. There are further explanation available by clicking the <infoIcon /> next to the table.",
-    "info-result-p8-mobile": "The details panel shows you what to expect in terms of reparition of the food. With numbers this time. <linkToDetailsHelp>Click here to learn more.</linkToDetailsHelp>",
+    "info-result-p7": "The graphs section shows you the proportions of people and pizzas graphically.",
+    "info-result-p8": "The details section shows you what to expect in terms of reparition of the food. With numbers this time. There are further explanation available by clicking the <infoIcon /> next to the table.",
+    "info-result-p8-mobile": "The details section shows you what to expect in terms of reparition of the food. With numbers this time. <linkToDetailsHelp>Click here to learn more.</linkToDetailsHelp>",
 
     "info-suggester-title": "The suggester",
     "info-suggester-p1": "If you are struggling to find a fair order plan, your can use the suggester.",
     "info-suggester-p2": "The suggester takes your needs into account, that is, the quantity of pizza, the fairness and the diversity of the order plan.",
     "info-suggester-p3": "The suggester then suggests an order that tends to maximize the quantity of restrictive diet pizza whist keeping the order fair for most restrictifs diet people.",
     "info-suggester-p4": "You can then choose to either keep or discard the suggestion.",
+    "info-suggester-p5": "The suggester can be accessed by clicking the <suggesterButton/> button below the flags.",
 
     "info-thanks-title": "Conclusion",
     "info-thanks-p1": "Thanks for using Pizza Party Maker, have a nice Pizza Party!",
@@ -189,14 +190,15 @@
     "pizzeria-no-pizza": "There are no pizzas in this pizzeria.",
     "no-pizzerias": "There are no saved pizzerias.",
     "save-pizzeria-as-title": "Save pizzeria as ...",
+    "save-pizzeria-as-title-short": "Save pizzeria as ...",
     "save-pizzeria-name-conflict": "<pizzeriaName/> already exists, override?",
     "save-pizzeria-content-of": "The content of <pizzeriaName/>:",
     "save-pizzeria-override": "Override",
     "save-pizzeria-name": "Name",
     
-    "details-panel-title": "The details panel",
-    "details-panel-p1": "This panel shows the underlying mechanism of the website. As well as giving a bit more information than just the flags.",
-    "details-panel-p2": "This panel shows the results of different simulations of your party.",
+    "details-panel-title": "The details section",
+    "details-panel-p1": "This section shows the underlying mechanism of the website. As well as giving a bit more information than just the flags.",
+    "details-panel-p2": "This section shows the results of different simulations of your party.",
     "details-panel-p3": "Each simulation result is presented in form of a line that show how much slices in average each person of each diet get, like so:",
     "details-panel-example-case": "Example",
     "details-panel-p4": "So here we know that each <red>omnivorous</red> ate 8 slices of pizza, each <blue>pesco-vegetarian</blue> and each <green>vegetarian</green> ate 6 slices and each <orange>vegan</orange> ate 7 slices.",
