--- a/src/locales/fr.json
+++ b/src/locales/fr.json
@@ -55,6 +55,7 @@
     "parameters-slices": "Parts par pizzas",
     "parameters-fairness": "Équité",
     "parameters-restore-default": "Réstorer les paramètres par défaut",
+    "parameters-reset": "Réinitialiser",
     
     "help": "Aide",    
     "created-by": "Créé par",
