Back to home page menu button added

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -57,6 +57,7 @@
     "parameters-restore-default": "Restore to default parameters",
     "parameters-reset": "Reset",
     
+    "home": "Home",
     "help": "Help",
     "created-by": "Created by",
     "cancel": "Cancel",
