--- a/src/locales/fr.json
+++ b/src/locales/fr.json
@@ -57,6 +57,7 @@
     "parameters-restore-default": "Réstorer les paramètres par défaut",
     "parameters-reset": "Réinitialiser",
     
+    "home": "Accueil",
     "help": "Aide",    
     "created-by": "Créé par",
     "cancel": "Annuler",
