Re-refactor overlays, add tooltips, changed fairness display

--- a/src/locales/fr.json
+++ b/src/locales/fr.json
@@ -99,7 +99,9 @@
     "suggester-popup-title": "Calculateur de suggestion",
     "suggester-description": "Choisissez les paramètres de la suggestion",
     "suggester-unfairness": "Inéquité :",
+    "suggester-unfairness-help": "Le pourcentage d'inéquité représente l'écart maximal autorisé entre la quantité de pizza mangés par deux personnes.",
     "suggester-strategy": "Strategie :",
+    "suggester-strategy-help": "Prix minimal : pour chaque régime, la pizza la moins chère sera selectionnée.\nDiversité maximale : pour chaque régime, un assortiment le plus large possible sera selectionné.",
     "suggester-quantity": "Quantité par personnes :",
     "suggester-compute": "Calculer la suggestion",
     "suggester-strategy-minimal": "Prix minimal",
