--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -99,7 +99,9 @@
     "suggester-popup-title": "Suggestion computer",
     "suggester-description": "Select your suggestion parameters below",
     "suggester-unfairness": "Unfairness:",
+    "suggester-unfairness-help": "The unfairness percentage represents the maximal allowed disparity between the quantity of pizza eaten by two persons.",
     "suggester-strategy": "Strategy:",
+    "suggester-strategy-help": "Minimal cost: For each diet, always chooses the cheapest pizza.\nMaximal diversity: for each diet, chooses as many differents pizza as possible.",
     "suggester-quantity": "Quantity per persons:",
     "suggester-compute": "Compute suggestion",
     "suggester-strategy-minimal": "Minimal cost",
