--- a/src/locales/fr.json
+++ b/src/locales/fr.json
@@ -3,10 +3,10 @@
     "people-panel-title": "Invités",
     "people-panel-total": "Total : {{total}}",
   
-    "diet-icon-omnivorous": "ominvore",
-    "diet-icon-pesco-vegetarian": "pesco‑végétarien",
-    "diet-icon-vegetarian": "végétarien",
-    "diet-icon-vegan": "vegan",
+    "omnivorous": "Ominvore",
+    "pesco-vegetarian": "Pesco‑végétarien",
+    "vegetarian": "Végétarien",
+    "vegan": "Vegan",
 
     "no-pizza": "Hmm ça manque de pizzas ici.",
 
@@ -53,6 +53,8 @@
     
     "parameters-title": "Paramètres",
     "parameters-slices": "Parts par pizzas",
+    "parameters-slices_lowercase_one": "part par pizzas",
+    "parameters-slices_lowercase_other": "parts par pizzas",
     "parameters-fairness": "Équité",
     "parameters-restore-default": "Réstorer les paramètres par défaut",
     "parameters-reset": "Réinitialiser",
@@ -74,9 +76,11 @@
     "pizza-name": "Nom de la pizza",
     "pizza-price": "Prix de la pizza {{pizza}}",
     
-    "quantity-of": "Quantité de {{element}}",
-    "plus-of": "Ajouter un(e) {{element}}",
-    "minus-of": "Retirer un(e) {{element}}",
+    "quantity-of": "Nombre de {{element}}",
+    "plus-of_masculin": "Ajouter un {{element}}",
+    "minus-of_masculin": "Retirer un {{element}}",
+    "plus-of_feminin": "Ajouter une {{element}}",
+    "minus-of_feminin": "Retirer une {{element}}",
     "delete-element": "Supprimer {{element}}",
     "expand-element": "Étendre {{element}}",
     
@@ -88,10 +92,14 @@
     "load-pizzeria": "Charger {{pizzeriaName}}",
     "delete-pizzeria": "Supprimer la pizzeria {{pizzeriaName}}",
     
-    "normal-person": "Personne omnivore",
-    "pescoVegetarian-person": "Personne pesco-végétarienne",
-    "vegetarian-person": "Personne végétarienne",
-    "vegan-person": "Personne vegane",
+    "normal-person_one": "personne omnivore",
+    "pescoVegetarian-person_one": "personne pesco-végétarienne",
+    "vegetarian-person_one": "personne végétarienne",
+    "vegan-person_one": "personne vegane",
+    "normal-person_other": "personnes omnivores",
+    "pescoVegetarian-person_other": "personnes pesco-végétariennes",
+    "vegetarian-person_other": "personnes végétariennes",
+    "vegan-person_other": "personnes veganes",
     
     "language-selection": "Changer la langue",
     
@@ -221,6 +229,49 @@
     "details-flags-title": "Mais donc que représentent les indicateurs ?",
     "details-flags-p1": "Les indicateurs se basent sur le cas moyen, qui est selon moi, le plus fiable et le plus réaliste.",
     "details-flags-p2": "L'équité est basé sur le pourcentage de pizza supplémentaire que le régime ayant mangé le plus a eu. Dans notre exemple, les <red>omnivores</red> ont mangé le plus avec 8 parts de pizza chacun, et les <green>végétariens</green> ont mangé 6 parts. Ce qui veut dire que les <red>omnivores</red> ont mangé 33% de pizza en plus que les <green>végétariens</green>.",
-    "details-flags-p3": "L'indicateur est à <sky>Parfait</sky> si ce pourcentage est <strong>exactement 0%</strong>. Il est à <green>Bien</green> si ce pourcentage est <strong>entre 0% et 25%</strong>. Il est à <orange>Moyen</orange> si ce pourcentage est <strong>entre 25% et 50%</strong>. Et à <red>Mauvais</red> si ce pourcentage est <strong>au dessus de 50%</strong>."
+    "details-flags-p3": "L'indicateur est à <sky>Parfait</sky> si ce pourcentage est <strong>exactement 0%</strong>. Il est à <green>Bien</green> si ce pourcentage est <strong>entre 0% et 25%</strong>. Il est à <orange>Moyen</orange> si ce pourcentage est <strong>entre 25% et 50%</strong>. Et à <red>Mauvais</red> si ce pourcentage est <strong>au dessus de 50%</strong>.",
+
+    "light-fairness-strict": "Très équitable",
+    "light-fairness-strict-title": "Très équitable",
+    "light-fairness-medium": "Plutôt équitable",
+    "light-fairness-medium-title": "Plutôt équitable",
+    "light-fairness-lenient": "Peu équitable",
+    "light-fairness-lenient-title": "Peu équitable",
+
+    "light-people-label": "Selectionnez le nombre de personne pour chaque régime alimentaire.",
+    "light-fairness-label": "Selectionnez à quel point la commande doit être équitable.",
+    "light-quantity-label": "Selectionnez la quantité de pizza par personnes.",
+
+    "light-compute-label": "Calculer",
+
+    "light-omnivorous-pizza-quantity_one": "pizza avec de la viande",
+    "light-omnivorous-pesco-vegetarian-pizza-quantity_one": "pizza avec de la viande / du poisson",
+    "light-omnivorous-pesco-vegetarian-vegetarian-pizza-quantity_one": "pizza non végane",
+    "light-omnivorous-pesco-vegetarian-vegetarian-vegan-pizza-quantity_one": "pizza de n'importe quel type",
+    "light-pesco-vegetarian-pizza-quantity_one": "pizza pesco-végétarienne",
+    "light-pesco-vegetarian-vegetarian-pizza-quantity_one": "pizza pesco-végétarienne / végétarienne",
+    "light-pesco-vegetarian-vegetarian-vegan-pizza-quantity_one": "pizza sans viande",
+    "light-vegetarian-pizza-quantity_one": "pizza végétarienne",
+    "light-vegetarian-vegan-pizza-quantity_one": "pizza végétarienne / végane",
+    "light-vegan-pizza-quantity_one": "pizza végane",
+
+    "light-omnivorous-pizza-quantity_other": "pizzas avec de la viande",
+    "light-omnivorous-pesco-vegetarian-pizza-quantity_other": "pizzas avec de la viande / du poisson",
+    "light-omnivorous-pesco-vegetarian-vegetarian-pizza-quantity_other": "pizzas non véganes",
+    "light-omnivorous-pesco-vegetarian-vegetarian-vegan-pizza-quantity_other": "pizzas de n'importe quel type",
+    "light-pesco-vegetarian-pizza-quantity_other": "pizzas pesco-végétariennes",
+    "light-pesco-vegetarian-vegetarian-pizza-quantity_other": "pizzas pesco-végétariennes / végétariennes",
+    "light-pesco-vegetarian-vegetarian-vegan-pizza-quantity_other": "pizzas sans viande",
+    "light-vegetarian-pizza-quantity_other": "pizzas végétariennes",
+    "light-vegetarian-vegan-pizza-quantity_other": "pizzas végétariennes / véganes",
+    "light-vegan-pizza-quantity_other": "pizzas véganes",
+
+    "light-back-button": "Recommencer",
+    "light-edit-button": "Changer la suggestion",
+
+    "slices-icon-title": "{{quantity}} parts par personnes. 1 pizza = 8 parts.",
+
+    "light-suggestion-title": "Voici les pizzas que vous devriez commander :",
+    "light-suggestion-flag": "Les indicateurs ci-dessous vous précise si votre commande est équitable pour chaque régime."
   }
 }
