--- a/src/locales/fr.json
+++ b/src/locales/fr.json
@@ -65,6 +65,7 @@
     "cancel": "Annuler",
     "plus": "Plus",
     "minus": "Moins",
+    "more": "Plus",
     "close": "Fermer",
     "save": "Enregistrer",
     "delete": "Supprimer",
@@ -231,10 +232,6 @@
     "details-flags-p2": "L'équité est basé sur le pourcentage de pizza supplémentaire que le régime ayant mangé le plus a eu. Dans notre exemple, les <red>omnivores</red> ont mangé le plus avec 8 parts de pizza chacun, et les <green>végétariens</green> ont mangé 6 parts. Ce qui veut dire que les <red>omnivores</red> ont mangé 33% de pizza en plus que les <green>végétariens</green>.",
     "details-flags-p3": "L'indicateur est à <sky>Parfait</sky> si ce pourcentage est <strong>exactement 0%</strong>. Il est à <green>Bien</green> si ce pourcentage est <strong>entre 0% et 25%</strong>. Il est à <orange>Moyen</orange> si ce pourcentage est <strong>entre 25% et 50%</strong>. Et à <red>Mauvais</red> si ce pourcentage est <strong>au dessus de 50%</strong>.",
 
-    "light-fairness-strict": "Très équitable",
-    "light-fairness-medium": "Plutôt équitable",
-    "light-fairness-lenient": "Peu équitable",
-
     "light-people-label": "Selectionnez le nombre de personne pour chaque régime alimentaire.",
     "light-fairness-label": "Selectionnez à quel point la commande doit être équitable.",
     "light-quantity-label": "Selectionnez la quantité de pizza par personnes.",
@@ -264,12 +261,12 @@
     "light-vegan-pizza-quantity_other": "pizzas véganes",
 
     "light-back-button": "Recommencer",
-    "light-edit-button": "Changer la suggestion",
+    "light-edit-button": "Changer la suggestion manuellement",
 
     "slices-icon-title": "{{quantity}} parts par personnes. 1 pizza = 8 parts.",
 
     "light-suggestion-title": "Voici les pizzas que vous devriez commander :",
-    "light-suggestion-flag": "Les indicateurs ci-dessous vous précise si votre commande est équitable pour chaque régime.",
+    "light-suggestion-flag": "Nombre de parts mangé en moyenne selon les régimes.",
 
     "go-previous-ver": "Ancienne version",
     "go-light-ver": "Nouvelle version",
@@ -279,6 +276,16 @@
     "light-quantity-equal": "/",
     "light-quantity-pizzas_one": "{{pizzas}} pizza",
     "light-quantity-pizzas_other": "{{pizzas}} pizzas",
-    "light-quantity-per-persons": "par personnes"
+    "light-quantity-per-persons": "par personnes",
+
+    "light-more-omnivorous-button": "Plus de viande",
+    "light-more-pesco-vegetarian-button": "Plus de poisson",
+    "light-more-vegetarian-button": "Plus de fromage",
+    "light-more-fair-button": "Plus équitable",
+
+    "light-0-people": "Ajoutez au moins une personne",
+
+    "light-less-fair-warning" : "⚠ En ajoutant des {{pizza}}, vous rendez la commande moins équitable.",
+    "light-less-fair-title" : "Plus de {{pizza}}."
   }
 }
