--- a/src/locales/fr.json
+++ b/src/locales/fr.json
@@ -126,12 +126,12 @@
 
     "info-title": "<bold>Bienvenue sur <title /> ! </bold>",
     "info-intro-p1": "Ce petit site web est un outil pour planifier vos soirées pizza.",
-    "info-intro-p2": "Plus précisément, il va vous aider à choisir le bonne quantité de pizza de chaque régime alimentaire pour satisfaire tous vos invités.",
+    "info-intro-p2": "Plus précisément, il va vous aider à choisir la bonne quantité de pizza de chaque régime alimentaire pour satisfaire tous vos invités.",
     "info-intro-p3": "Par exemple, imaginez que vous souhaitiez créer un buffet de pizza pour <pink>7 personnes</pink>, l'une d'entre elle est <green>végétarienne</green>, 2 autres sont <blue>pesco-végétariennes</blue>, une autre est <orange>végane</orange>, et les trois dernières mangent de la viande (Elles seront appelées <red>omnivores</red> par simplicité).",
     "info-intro-p4": "<bold>Combien de chaque pizza devriez vous commander ?</bold>",
     "info-intro-p5": "Vous pourriez supposer que <red>3 pizzas avec de la viande</red>, <blue>deux avec du poisson</blue>, <green>une végétarienne</green> et <orange>une végane</orange>. mais vous auriez <bold>tort !</bold>",
 
-    "info-theorem-p1": "Je vous présente mon théorème fait de toute pièce :",
+    "info-theorem-p1": "Je vous présente mon théorème monté de toutes pièces :",
     "info-theorem-title": "Le théorème de \"Tout le monde aime la 4 fromages\"",
     "info-theorem-p2": "En effet ! Un choix très courant pour une pizza <green>végétarienne</green> est la 4 fromages, mais les <red>omnivores</red> et les <blue>pesco-végétariens</blue> vont aussi en manger.",
     "info-theorem-p3": "Une fois que les pizza les plus permissives d'un point de vue du régime alimentaire seront complètement mangées, les parts restantes seront exclusivement mangées par les régimes les plus permissifs. Lésant ainsi les régimes restrictifs.",
@@ -232,8 +232,7 @@
     "details-flags-p2": "L'équité est basé sur le pourcentage de pizza supplémentaire que le régime ayant mangé le plus a eu. Dans notre exemple, les <red>omnivores</red> ont mangé le plus avec 8 parts de pizza chacun, et les <green>végétariens</green> ont mangé 6 parts. Ce qui veut dire que les <red>omnivores</red> ont mangé 33% de pizza en plus que les <green>végétariens</green>.",
     "details-flags-p3": "L'indicateur est à <sky>Parfait</sky> si ce pourcentage est <strong>exactement 0%</strong>. Il est à <green>Bien</green> si ce pourcentage est <strong>entre 0% et 25%</strong>. Il est à <orange>Moyen</orange> si ce pourcentage est <strong>entre 25% et 50%</strong>. Et à <red>Mauvais</red> si ce pourcentage est <strong>au dessus de 50%</strong>.",
 
-    "light-people-label": "Selectionnez le nombre de personne pour chaque régime alimentaire.",
-    "light-fairness-label": "Selectionnez à quel point la commande doit être équitable.",
+    "light-people-label": "Selectionnez le nombre de personnes pour chaque régime alimentaire.",
     "light-quantity-label": "Selectionnez la quantité de pizza par personnes.",
 
     "light-compute-label": "Calculer",
@@ -261,22 +260,22 @@
     "light-vegan-pizza-quantity_other": "pizzas véganes",
 
     "light-back-button": "Recommencer",
-    "light-edit-button": "Changer la suggestion manuellement",
+    "light-edit-button": "Modifier la suggestion manuellement",
+    "light-edit-button-short": "Modifier manuellement",
 
     "slices-icon-title": "{{quantity}} parts par personnes. 1 pizza = 8 parts.",
 
     "light-suggestion-title": "Voici les pizzas que vous devriez commander :",
-    "light-suggestion-flag": "Nombre de parts mangé en moyenne selon les régimes.",
+    "light-suggestion-flag": "Nombre de parts mangées en moyenne selon les régimes.",
 
     "go-previous-ver": "Ancienne version",
     "go-light-ver": "Nouvelle version",
     "light-why": "(Vous n'aviez pas besoin de ce site pour savoir ça.)",
-    "light-quantity-slices_one": "{{count}} part",
-    "light-quantity-slices_other": "{{count}} parts",
-    "light-quantity-equal": "/",
-    "light-quantity-pizzas_one": "{{pizzas}} pizza",
-    "light-quantity-pizzas_other": "{{pizzas}} pizzas",
-    "light-quantity-per-persons": "par personnes",
+    "light-quantity-missing_one": "Il manque {{count}} pizza",
+    "light-quantity-missing_other": "Il manque {{count}} pizzas",
+    "light-quantity-extra_one": "Il y a {{count}} pizza en trop",
+    "light-quantity-extra_other": "Il y a {{count}} pizzas en trop",
+    "light-quantity-exact": "Parfait",
 
     "light-more-omnivorous-button": "Plus de viande",
     "light-more-pesco-vegetarian-button": "Plus de poisson",
@@ -286,6 +285,33 @@
     "light-0-people": "Ajoutez au moins une personne",
 
     "light-less-fair-warning" : "⚠ En ajoutant des {{pizza}}, vous rendez la commande moins équitable.",
-    "light-less-fair-title" : "Plus de {{pizza}}."
+    "light-less-fair-title" : "Plus de {{pizza}}.",
+
+    "light-about": "À propos de ce site - Aide",
+
+    "light-about-how-to": "Comment utiliser ce site ?",
+    "light-about-p1": "Commencez par entrer combien de personnes de chaque régime compose votre groupe en utilisant les selecteurs suivants :",
+    "light-about-p2": "Ensuite, choisissez quelle quantité de pizza par personne vous souhaitez avoir, puis cliquez sur le gros bouton <computeButton />",
+    "light-about-p3": "Le site vous propose alors la solution la plus équitable possible.",
+    "light-about-p4": "<bold>Elle vous convient ?</bold> Parfait vous pouvez vous en servir et fermer le site.",
+    "light-about-p5": "<bold>Elle ne vous convient pas ?</bold> Vous avez plusieurs moyen de la changer selon votre convenance.",
+
+    "light-about-change": "Changer la solution.",
+    "light-about-p6": "Vous avez plusieurs choix pour changer la solution.",
+    "light-about-p7": "Vous pouvez utiliser les boutons <moreButton/> à côté des types de pizza choisies qui vous permettent de demander une solution qui contient au moins une pizza de ce type en plus.",
+    "light-about-p8": "Vous pouvez aussi cliquer sur <modifyButton/> pour changer manuellement la quantité de chaque type de pizza. Pour vous aider à garder le bon nombre de pizzas, l'indicateur suivant apparaît :",
+    "light-about-p8-short": "Vous pouvez aussi cliquer sur <modifyButtonShort/> pour changer manuellement la quantité de chaque type de pizza. Pour vous aider à garder le bon nombre de pizzas, l'indicateur suivant apparaît :",
+    "light-about-p9": "Vous pouvez également cliquer sur <moreFairButton/> qui modifiera la suggesiton pour la rendre un peu plus équitable.",
+    "light-about-p10": "⚠ Attention ! Utiliser ces boutons va rendre la commande moins équitable.",
+    "light-about-p11": "Pour juger d'à quel point votre commande est équitable vous pouvez consulter les indicateurs qui ressemblent à ça :",
+    "light-about-p12": "Ces indicateurs vous indiquent combien, en moyenne, une personne d'un régime spécifique mangera de pizza. Comparez simplement la quantité de pizza de chaque régime pour voir si la commande vous paraît équitable. Par exemple ici les omnivores mangent 9 parts en moyenne, et les végétariens en mangent 6. Ce n'est pas très équitable.",
+    "light-about-p13": "Voilà ! Vous savez tout ! Bonne soirée pizza !",
+  
+    "light-warning": "⚠ Attention ⚠",
+    "light-warning-edit-text": "En modifiant manuellement la suggestion, vous risquez de la rendre moins équitable, gardez un œil sur les indicateurs de quantités mangées par chaque régime.",
+    "light-warning-checkbox": "Ne plus afficher ce message",
+    "light-warning-plus-text": "En ajoutant des {{pizza}}, vous rendrez la commande moins équitable.",
+    "add": "Ajouter",
+    "modify": "Modifier"
   }
 }
