--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -240,7 +240,7 @@
     "light-omnivorous-pizza-quantity_one": "pizza with meat",
     "light-omnivorous-pesco-vegetarian-pizza-quantity_one": "pizza with meat / fish",
     "light-omnivorous-pesco-vegetarian-vegetarian-pizza-quantity_one": "non-vegan pizza",
-    "light-omnivorous-pesco-vegetarian-vegetarian-vegan-pizza-quantity_one": "any kind of pizza",
+    "light-omnivorous-pesco-vegetarian-vegetarian-vegan-pizza-quantity_one": "pizza of any kind",
     "light-pesco-vegetarian-pizza-quantity_one": "pesco-vegetarian pizza",
     "light-pesco-vegetarian-vegetarian-pizza-quantity_one": "pesco-vegetarian / vegetarian pizza",
     "light-pesco-vegetarian-vegetarian-vegan-pizza-quantity_one": "pizza without meat",
@@ -251,7 +251,7 @@
     "light-omnivorous-pizza-quantity_other": "pizzas with meat",
     "light-omnivorous-pesco-vegetarian-pizza-quantity_other": "pizzas with meat / fish",
     "light-omnivorous-pesco-vegetarian-vegetarian-pizza-quantity_other": "non-vegan pizzas",
-    "light-omnivorous-pesco-vegetarian-vegetarian-vegan-pizza-quantity_other": "any kind of pizzas",
+    "light-omnivorous-pesco-vegetarian-vegetarian-vegan-pizza-quantity_other": "pizzas of any kind",
     "light-pesco-vegetarian-pizza-quantity_other": "pesco-vegetarian pizzas",
     "light-pesco-vegetarian-vegetarian-pizza-quantity_other": "pesco-vegetarian / vegetarian pizzas",
     "light-pesco-vegetarian-vegetarian-vegan-pizza-quantity_other": "pizzas without meat",
